ChangeLog

Name: William Lai
Date: 09-23-2013
Description: Been a little while. More game logic, almost all done now.
     * src/King.java: Added castling as possible moves
     * src/Player.java: Fixed a silly comment typo
     * src/StandardChessGame.java: Finished off castling conditionals and implemented a checkmate check.

Name: William Lai
Date: 04-09-2013
Description: Added and fixed more game logic
     * src/Definitions.java: Added helper function flip for changing colors
     * src/StandardChessGame.java: Changed initial turn color to White, fixed isLegalMove function (at least for now), moved part of function to new helper function hasPieceInWay, created new helper function flipTurn, cleaned up and fixed some other code

Name: William Lai
Date: 04-07-2013
Description: Added some functions to aid in game logic
     * src/Bishop.java: Added threats function
     * src/King.java: Added threats function
     * src/Knight.java: Added threats function
     * src/Move.java: Overrode equals function of Object to allow Arraylist's contains method to work as intended
     * src/Pawn.java: Added threats function
     * src/Piece.java: Added abstract function threats for use in checking for checks
     * src/Rook.java: Added threats function
     * src/StandardChessGame.java: Implemented inCheck function and added another parameter of type Board to allow for checking of clone boards

Name: William Lai
Date: 04-02-2013
Description: ChangeLog overhaul
     * ChangeLog: Added several entries and clarified some file names

Name: Vincent Wong
Date: 03-29-2013
Description: Minor tweaks to game logic and added some GUI functionality
     * New files: Images/pieceBB.png, Images/pieceBK.png, Images/pieceBN.png, Images/pieceBP.png, Images/pieceBQ.png, Images/pieceBR.png, Images/pieceWB.png, Images/pieceWK.png, Images/pieceWN.png, Images/pieceWP.png, Images/pieceWQ.png, Images/pieceWR.png