@@ -96,7 +96,7 @@ public abstract class Piece
 		return "B" + getName();
 	}
 	
-	public abstract ArrayList<Move> moves();
-	public abstract ArrayList<Move> threats(); //for checking checks; only different from moves for Pawn; is there a better way?
+	public abstract ArrayList<Move> getMoves();
+	public abstract ArrayList<Move> getThreats(); //for checking checks; only different from moves for Pawn; is there a better way?
 	public abstract Piece clone();
 }
